--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@ ul#container li a.box{
     overflow: hidden;
     box-shadow: 0 0 5px #999;
     transition: all 0.3s ease-in-out;
-    display: none;
+    display: block;
     /*cursor: default;*/
     /*pointer-events: none;*/
 }
